# SecureProgramming

./: .gitignore  CMakeLists.txt  JsonHandler.cpp  JsonHandler.h  chat.json  chatEncrypt_test.cpp  chatdialog.cpp  chatdialog.h  chatdialog.ui  checkValidJSON.cpp  client.cpp  client.h  client_update.json  connection.cpp  connection.h  decrypt_AES.cpp  ecodeBase_64.cpp  encrypt_AES.cpp  encrypt_AES.h  encrypt_exmpl.cpp  file_Download.cpp  file_Transfer_Test.cpp  file_Upload.cpp  generate_Keys.cpp  generate_Keys.h  ip_List.cpp  login.cpp  login.h  login_test.cpp  main.cpp  network-chat.pro  parseJsonFile  parseJsonFile.cpp  passwords.txt  peermanager.cpp  peermanager.h  private_key.pem  private_key_example_1.pem  publicEncrypt_test.cpp  publicKeyStringConversion.cpp  (+19 more)
UI/SecureChat/: CMakeLists.txt  JsonHandler.cpp  JsonHandler.h  RSA_generate_Keys.cpp  RSA_generate_Keys.h  client.cpp  client.h  controller.cpp  controller.h  decrypt_AES.cpp  decrypt_AES.h  decrypt_RSA.cpp  decrypt_RSA.h  ecodeBase_64.cpp  ecodeBase_64.h  encrypt_AES.cpp  encrypt_AES.h  generate_Keys.cpp  generate_Keys.h  json.hpp  main.cpp  messagehandler.cpp  messagehandler.h  publicKeyStringConversion.cpp  publicKeyStringConversion.h  recipient.cpp  recipient.h  run.sh  securechatmainwindow.cpp  securechatmainwindow.h  securechatmainwindow.ui  test_JsonHandler_combined  test_JsonHandler_combined.cpp  validate_Message_Regex.cpp
UI/SecureChat/Keys/keys2/: private_key.pem  public_key.pem
secureProgramming/: manage.py
secureProgramming/chat/: consumers.py  models.py  urls.py  views.py
secureProgramming/secureProgramming/: asgi.py  routing.py  settings.py  urls.py  wsgi.py
server/: SecureChatserver.py  server.py  server.sh  sig_Check.py
test json files/: client_list.json  client_update_request.json  hello.json  no_data.json  not_base64.json  server_hello.json  wrong_counter.json
test_json_files/: chat.json  client_list.json  client_list_request.json  client_update.json  hello.json  no_data.json  not_base64.json  public_chat.json  wrong_counter.json  wrong_signature.json
